# my-lib

./: .gitignore  README.md
lambda/: CMakeLists.txt  lambdas.cpp
lib/: CMakeLists.txt  hello.cpp
lib/examples/: CMakeLists.txt  consumer.cpp  cpp_callback.cpp  cpp_example.cpp
lib/include/: mylib.h
lib/src/: mylib.c  mylib_cpp.cpp
lib/tests/: CMakeLists.txt  simple_test.c  simple_test.cpp
